and css class too z-index fix

--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -24,6 +24,7 @@
     transform: translate(-50%, -50%);
 
     &.current {
+      z-index: 9;
       animation: hideBgImage 4s ease 0s 1 forwards;
     }
   }
